--- a/Disease Prediction Using Machine Learning + App/Disease_Prediction_Using_Machine_Learning_+_App.ipynb
+++ b/Disease Prediction Using Machine Learning + App/Disease_Prediction_Using_Machine_Learning_+_App.ipynb
@@ -16,74 +16,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "a042fb85"
-      },
-      "source": [
-        "\n",
-        "\n",
-        "\n",
-        "## Deploy the trained disease prediction model on a Streamlit app.\n",
-        "\n",
-        "This section outlines the process of deploying the trained disease prediction model as a web application using Streamlit.\n",
-        "\n",
-        "### Create a streamlit application file\n",
-        "\n",
-        "A new Python file (`app.py`) is created to contain the Streamlit application code.\n",
-        "\n",
-        "The necessary libraries for the Streamlit application are imported.\n",
-        "\n",
-        "### Load the trained model and labelencoder\n",
-        "\n",
-        "The saved trained model and the LabelEncoder are loaded into the Streamlit application.\n",
-        "\n",
-        "The application title and a brief description are set for the Streamlit app interface.\n",
-        "\n",
-        "### Design the user interface\n",
-        "\n",
-        "Streamlit components are used to create an interactive interface for users to select symptoms.\n",
-        "\n",
-        "Input fields (checkboxes) are created in the sidebar for each symptom from the training data.\n",
-        "\n",
-        "## Process user input\n",
-        "\n",
-        "The selected symptoms from the user interface are processed and formatted into a pandas DataFrame suitable for the model's input.\n",
-        "\n",
-        "The input data from the checkboxes is converted into a DataFrame, ensuring the columns match the training data.\n",
-        "\n",
-        "## Make predictions\n",
-        "\n",
-        "The loaded model is used to predict the disease based on the user's input.\n",
-        "\n",
-        "The formatted user input is fed into the trained model to obtain a disease prediction.\n",
-        "\n",
-        "## Display the prediction\n",
-        "\n",
-        "The predicted disease is displayed to the user in the Streamlit application interface.\n",
-        "\n",
-        "The predicted disease, obtained from the model and decoded using the LabelEncoder, is shown to the user.\n",
-        "\n",
-        "## Add instructions for running the app\n",
-        "\n",
-        "Instructions for installing and running the Streamlit application are provided.\n",
-        "\n",
-        "Markdown text is added to the `app.py` file explaining how to install Streamlit and run the application from the terminal.\n",
-        "\n",
-        "## Summary:\n",
-        "\n",
-        "This section summarizes the key findings from the data analysis and outlines the steps taken to create the Streamlit application.\n",
-        "\n",
-        "### Data Analysis Key Findings\n",
-        "\n",
-        "Key observations and results from the data loading, exploration, and model training phases are summarized.\n",
-        "\n",
-        "### Insights or Next Steps\n",
-        "\n",
-        "Potential improvements and future steps for the project are suggested, such as saving and loading the LabelEncoder and implementing error handling."
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "#**Disease Prediction Using Machine Learning**"
       ],
@@ -158,7 +90,7 @@
       "metadata": {
         "id": "Q-4VcMvK0J4G"
       },
-      "execution_count": 78,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -195,7 +127,7 @@
       "metadata": {
         "id": "M-oLqay6zycF"
       },
-      "execution_count": 79,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -209,14 +141,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 3,
       "metadata": {
         "id": "Q_WSY0hrzjLf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 360
         },
-        "outputId": "8e84f780-4246-4094-c91b-3f6a479438a2"
+        "outputId": "689dff76-95d6-4592-c2b8-6424bc54358f"
       },
       "outputs": [
         {
@@ -262,7 +194,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cf05eb8a-c90b-47cb-a91b-bfb7ea417bae\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-c58d9155-8b9d-408c-a7c1-41c45d16c5e3\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -432,7 +364,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cf05eb8a-c90b-47cb-a91b-bfb7ea417bae')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c58d9155-8b9d-408c-a7c1-41c45d16c5e3')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -484,12 +416,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-cf05eb8a-c90b-47cb-a91b-bfb7ea417bae button.colab-df-convert');\n",
+              "        document.querySelector('#df-c58d9155-8b9d-408c-a7c1-41c45d16c5e3 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-cf05eb8a-c90b-47cb-a91b-bfb7ea417bae');\n",
+              "        const element = document.querySelector('#df-c58d9155-8b9d-408c-a7c1-41c45d16c5e3');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -509,8 +441,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-5e65537e-82d2-47ab-b054-120aae56284a\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e65537e-82d2-47ab-b054-120aae56284a')\"\n",
+              "    <div id=\"df-1d9b3283-a002-4ecc-8972-e0d03b201c0d\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1d9b3283-a002-4ecc-8972-e0d03b201c0d')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -629,7 +561,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-5e65537e-82d2-47ab-b054-120aae56284a button');\n",
+              "            document.querySelector('#df-1d9b3283-a002-4ecc-8972-e0d03b201c0d button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -645,7 +577,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 80
+          "execution_count": 3
         }
       ],
       "source": [
@@ -673,9 +605,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tTtpSqoy0zb9",
-        "outputId": "2b612aa7-0b99-423a-8f5e-26d4d96cfb83"
+        "outputId": "ee03ecf0-e4e1-4e9a-b89f-3a8407fb5198"
       },
-      "execution_count": 81,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -698,9 +630,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "430f29f8-1a7f-4ca9-9afc-28d51e8ffba1"
+        "outputId": "76f78e4f-3266-4995-f91b-bc8d9af606ad"
       },
-      "execution_count": 82,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -736,9 +668,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 458
         },
-        "outputId": "3752636a-6ead-4106-cde3-b835614abee6"
+        "outputId": "1b2a4e3b-5463-45d3-bf92-945836558a27"
       },
-      "execution_count": 83,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -831,7 +763,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 83
+          "execution_count": 6
         }
       ]
     },
@@ -844,7 +776,7 @@
       "metadata": {
         "id": "gAueW0feEmB7"
       },
-      "execution_count": 84,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -867,9 +799,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "67f19d0c-45a6-47e1-e51d-9a061c73a650"
+        "outputId": "0ea725ab-e712-4e89-8a8c-00171490b523"
       },
-      "execution_count": 85,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1011,7 +943,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 85
+          "execution_count": 8
         }
       ]
     },
@@ -1047,12 +979,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 516
+          "height": 386
         },
         "id": "6Qq1fLYJG05v",
-        "outputId": "b1ad0bb4-1e73-489b-8e2e-0de8ea3894db"
+        "outputId": "34c18309-8865-45bb-e132-e7d8623f89d8"
       },
-      "execution_count": 86,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1096,9 +1028,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "it53XlEVTz1w",
-        "outputId": "7450300f-4fb3-4099-85a6-8b828abd74bd"
+        "outputId": "9b78dd08-3cb3-4494-a896-1f6a530546eb"
       },
-      "execution_count": 87,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -1130,7 +1062,7 @@
       "metadata": {
         "id": "PazfcUT8SX0T"
       },
-      "execution_count": 88,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1142,7 +1074,7 @@
       "metadata": {
         "id": "v9lYd4_MGwwN"
       },
-      "execution_count": 89,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1175,7 +1107,7 @@
       "metadata": {
         "id": "4caDMweLHAy6"
       },
-      "execution_count": 90,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -1222,7 +1154,7 @@
       "metadata": {
         "id": "XkEP-0VZHESL"
       },
-      "execution_count": 91,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -1251,9 +1183,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8nXxiZ2HHVc",
-        "outputId": "f4ba6706-50b0-4c06-b8f6-6e037f42e723"
+        "outputId": "e6447b06-c0f2-437a-a9d3-d586c3ba2b11"
       },
-      "execution_count": 92,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1293,9 +1225,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7rr_Ub7FHJqj",
-        "outputId": "d3b56695-9570-48a5-e8cf-60d48d7a4bda"
+        "outputId": "8d5796ec-c73e-4cec-f05c-ad052875d435"
       },
-      "execution_count": 93,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1333,9 +1265,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmx8i0aTHL3b",
-        "outputId": "a55b376d-ff97-4d61-fe68-a708248f9298"
+        "outputId": "b051d494-391b-422f-d6a5-673103c5b431"
       },
-      "execution_count": 94,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1375,9 +1307,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0huKzSVWHO_i",
-        "outputId": "4753cb90-a107-40cf-ae5b-e0a03b78ca82"
+        "outputId": "bcb2d99d-3ef9-43d1-84c2-c5640abdaa60"
       },
-      "execution_count": 95,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -1450,7 +1382,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Implement feature importance of random forest model and save the model.\n",
+        "Implement feature importance from random forest model and save the model.\n",
         "\n"
       ],
       "metadata": {
@@ -1471,9 +1403,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PXZTC2naHQ9a",
-        "outputId": "18488b3c-3963-41bf-f31f-e6c227657cf6"
+        "outputId": "a53375f1-00a4-4370-b489-faa15f119661"
       },
-      "execution_count": 96,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1508,9 +1440,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "i3QQk8mIHSqz",
-        "outputId": "041b8afc-0f1c-4d3c-dacb-157224077e8f"
+        "outputId": "c5dd4d9c-6225-4889-8e06-51d45391428a"
       },
-      "execution_count": 97,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1558,21 +1490,44 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "487874a0",
+        "outputId": "6a554b9d-3dff-4343-872b-d55a3f6b7bb9"
+      },
+      "source": [
+        "!pip install joblib"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: joblib in /usr/local/lib/python3.12/dist-packages (1.5.2)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
         "id": "b67b09e6",
-        "outputId": "41b1f97a-10a3-428a-9c54-1543fba103a8"
+        "outputId": "ec346fbd-54eb-4d81-b133-7534ed2049f0"
       },
       "source": [
         "%%writefile app.py\n",
         "import streamlit as st\n",
         "import joblib"
       ],
-      "execution_count": 98,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting app.py\n"
+            "Writing app.py\n"
           ]
         }
       ]
@@ -1595,7 +1550,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8718de84",
-        "outputId": "15dd992e-4c1e-4b6b-e09d-dda8a816cc99"
+        "outputId": "ba512736-7010-4fb1-d9d2-48d1c79e6d01"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1612,7 +1567,7 @@
         "le = LabelEncoder()\n",
         "le.fit(df_train[TARGET])\n"
       ],
-      "execution_count": 99,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1641,7 +1596,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2fc69a35",
-        "outputId": "4cc0edf4-717d-4e0c-9e6b-79073fd03713"
+        "outputId": "642419bd-5534-4b08-8cd9-4b502fc8a7d2"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1649,7 +1604,7 @@
         "st.title('Disease Prediction App')\n",
         "st.write('Enter the symptoms to predict the disease.')\n"
       ],
-      "execution_count": 100,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1678,7 +1633,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c09d62ad",
-        "outputId": "098580b1-a0a9-42c2-d789-f4d1bde7e5f0"
+        "outputId": "806c570f-9b7a-46f1-ba30-f79ee1cbbcd5"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1695,7 +1650,7 @@
         "# Convert input data to a DataFrame\n",
         "input_df = pd.DataFrame([input_data])"
       ],
-      "execution_count": 101,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1724,7 +1679,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5dec0c3e",
-        "outputId": "39c0ecba-4264-4f27-f5ff-a589f9f14a2d"
+        "outputId": "3b9840fe-f7ae-4448-c398-7fca18afaa79"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1742,7 +1697,7 @@
         "    st.subheader('Predicted Disease:')\n",
         "    st.write(predicted_disease)\n"
       ],
-      "execution_count": 102,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1793,7 +1748,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ff25a50c",
-        "outputId": "a43d3ed0-c5a0-4b11-d7b6-176b1e40170b"
+        "outputId": "24a923ba-8c45-4a7a-d193-dc36d6a4a842"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1829,7 +1784,7 @@
         "    st.subheader('Predicted Disease:')\n",
         "    st.write(predicted_disease)"
       ],
-      "execution_count": 103,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1869,7 +1824,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "55175ef8",
-        "outputId": "31ab8504-fbe8-4c23-977e-0ec87a95dc2d"
+        "outputId": "2b461a01-a72a-454f-8886-19e2548339e6"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1886,7 +1841,7 @@
         "    st.subheader('Predicted Disease:')\n",
         "    st.write(predicted_disease)"
       ],
-      "execution_count": 104,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1926,7 +1881,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "11bf1895",
-        "outputId": "b43d4e21-f172-4c36-c4b6-12f296053d49"
+        "outputId": "db661ac8-d2dc-48b2-d150-9b539ab3f3bb"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -1939,7 +1894,7 @@
         "    st.subheader('Predicted Disease:')\n",
         "    st.write(predicted_disease)"
       ],
-      "execution_count": 105,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -1992,7 +1947,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "abaa7881",
-        "outputId": "10e212f7-7f85-48cf-9d6a-53c916ff572c"
+        "outputId": "70b4cfbc-57f3-4c29-95df-e6704cf2d815"
       },
       "source": [
         "%%writefile -a app.py\n",
@@ -2011,7 +1966,7 @@
         "    ```\n",
         "\"\"\")"
       ],
-      "execution_count": 106,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
