--- a/Disease Prediction Using Machine Learning + App/Disease_Prediction_Using_Machine_Learning_+_App.ipynb
+++ b/Disease Prediction Using Machine Learning + App/Disease_Prediction_Using_Machine_Learning_+_App.ipynb
@@ -67,7 +67,7 @@
       "cell_type": "code",
       "source": [
         "# import libraries\n",
-        "\n",
+        "!pip install --upgrade pip\n",
         "import os\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -88,10 +88,22 @@
         "warnings.filterwarnings('ignore')"
       ],
       "metadata": {
-        "id": "Q-4VcMvK0J4G"
+        "id": "Q-4VcMvK0J4G",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "36850a4e-0640-4461-fdb9-62876a0f5a46"
       },
-      "execution_count": 150,
-      "outputs": []
+      "execution_count": 194,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: pip in /usr/local/lib/python3.12/dist-packages (25.3)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -126,7 +138,7 @@
       "metadata": {
         "id": "M-oLqay6zycF"
       },
-      "execution_count": 151,
+      "execution_count": 195,
       "outputs": []
     },
     {
@@ -140,14 +152,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 152,
+      "execution_count": 196,
       "metadata": {
         "id": "Q_WSY0hrzjLf",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 360
         },
-        "outputId": "5923d7f1-2e74-4b7a-9d0c-8d3d1725c2a7"
+        "outputId": "980b2dfe-4749-486a-908d-1b397c45e0cb"
       },
       "outputs": [
         {
@@ -193,7 +205,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-1b7c602f-4aed-479d-ac97-fed4f4f8af70\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-2bccbf6d-16ce-4556-86c7-f9ee34de0cc1\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -363,7 +375,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b7c602f-4aed-479d-ac97-fed4f4f8af70')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2bccbf6d-16ce-4556-86c7-f9ee34de0cc1')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -415,12 +427,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-1b7c602f-4aed-479d-ac97-fed4f4f8af70 button.colab-df-convert');\n",
+              "        document.querySelector('#df-2bccbf6d-16ce-4556-86c7-f9ee34de0cc1 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-1b7c602f-4aed-479d-ac97-fed4f4f8af70');\n",
+              "        const element = document.querySelector('#df-2bccbf6d-16ce-4556-86c7-f9ee34de0cc1');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -440,8 +452,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-c09b162f-e626-4b0a-b470-e4f701ba8b8f\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c09b162f-e626-4b0a-b470-e4f701ba8b8f')\"\n",
+              "    <div id=\"df-dc4f044d-b4dc-4399-a39a-9a576a36ce87\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dc4f044d-b4dc-4399-a39a-9a576a36ce87')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -560,7 +572,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-c09b162f-e626-4b0a-b470-e4f701ba8b8f button');\n",
+              "            document.querySelector('#df-dc4f044d-b4dc-4399-a39a-9a576a36ce87 button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -576,7 +588,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 152
+          "execution_count": 196
         }
       ],
       "source": [
@@ -604,9 +616,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tTtpSqoy0zb9",
-        "outputId": "66eb15ee-03ea-4506-d5f6-ea723b1be772"
+        "outputId": "cacd508c-fbd0-4fc9-f87b-9545e5efd92a"
       },
-      "execution_count": 153,
+      "execution_count": 197,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,9 +641,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c504795c-b906-485d-8977-77ef19ef09bf"
+        "outputId": "43c75e91-a8e0-4817-d131-048edf29436d"
       },
-      "execution_count": 154,
+      "execution_count": 198,
       "outputs": [
         {
           "output_type": "stream",
@@ -667,9 +679,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 458
         },
-        "outputId": "cf23136f-55a2-4c3f-a842-41253f085498"
+        "outputId": "959a9b91-0398-40bb-804e-93a704c2a24b"
       },
-      "execution_count": 155,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -762,7 +774,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 155
+          "execution_count": 199
         }
       ]
     },
@@ -775,7 +787,7 @@
       "metadata": {
         "id": "gAueW0feEmB7"
       },
-      "execution_count": 156,
+      "execution_count": 200,
       "outputs": []
     },
     {
@@ -798,9 +810,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fc47841a-7648-40e5-d7e2-47c838ee6383"
+        "outputId": "995eb497-c0e9-43db-9729-2c80dbdde004"
       },
-      "execution_count": 157,
+      "execution_count": 201,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -942,7 +954,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 157
+          "execution_count": 201
         }
       ]
     },
@@ -981,9 +993,9 @@
           "height": 386
         },
         "id": "6Qq1fLYJG05v",
-        "outputId": "84697f45-d584-4f70-8f4e-fbfc42d19e5b"
+        "outputId": "4679abab-b328-44b8-d414-c71ad1790015"
       },
-      "execution_count": 158,
+      "execution_count": 202,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1027,9 +1039,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "it53XlEVTz1w",
-        "outputId": "64bfc066-1835-49cb-dadb-009fa22f55e5"
+        "outputId": "011afda4-b8a0-4d66-f3ea-2d65e6d4a879"
       },
-      "execution_count": 159,
+      "execution_count": 203,
       "outputs": [
         {
           "output_type": "stream",
@@ -1061,7 +1073,7 @@
       "metadata": {
         "id": "PazfcUT8SX0T"
       },
-      "execution_count": 160,
+      "execution_count": 204,
       "outputs": []
     },
     {
@@ -1073,7 +1085,7 @@
       "metadata": {
         "id": "v9lYd4_MGwwN"
       },
-      "execution_count": 161,
+      "execution_count": 205,
       "outputs": []
     },
     {
@@ -1106,7 +1118,7 @@
       "metadata": {
         "id": "4caDMweLHAy6"
       },
-      "execution_count": 162,
+      "execution_count": 206,
       "outputs": []
     },
     {
@@ -1153,7 +1165,7 @@
       "metadata": {
         "id": "XkEP-0VZHESL"
       },
-      "execution_count": 163,
+      "execution_count": 207,
       "outputs": []
     },
     {
@@ -1182,9 +1194,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8nXxiZ2HHVc",
-        "outputId": "01c62f58-8bbb-49e5-dbcc-141b51742e2e"
+        "outputId": "cac05348-6703-4d76-a7cd-1bb7d6d69578"
       },
-      "execution_count": 164,
+      "execution_count": 208,
       "outputs": [
         {
           "output_type": "stream",
@@ -1224,9 +1236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7rr_Ub7FHJqj",
-        "outputId": "6ca8cada-b9b0-41a1-90cc-ca85f9e1dee6"
+        "outputId": "2e245ca4-5803-4858-92ce-c81864fb33a8"
       },
-      "execution_count": 165,
+      "execution_count": 188,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,9 +1276,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmx8i0aTHL3b",
-        "outputId": "83643306-3c97-4b96-cc9d-78b850c1192c"
+        "outputId": "d58c726c-836a-4cb9-eeb7-cff008697a7f"
       },
-      "execution_count": 166,
+      "execution_count": 189,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,9 +1318,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0huKzSVWHO_i",
-        "outputId": "5731bfed-6087-4e61-9cbb-351f1b0afa4b"
+        "outputId": "619466fc-f688-4517-fa3b-9de5236eaf8b"
       },
-      "execution_count": 167,
+      "execution_count": 190,
       "outputs": [
         {
           "output_type": "stream",
@@ -1402,9 +1414,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "PXZTC2naHQ9a",
-        "outputId": "45697141-f049-432c-dd4d-93821ff1b358"
+        "outputId": "5167f2b3-746d-43fe-bf27-5fa1763fc3e7"
       },
-      "execution_count": 168,
+      "execution_count": 191,
       "outputs": [
         {
           "output_type": "stream",
@@ -1465,9 +1477,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IUO5hfXaU3oG",
-        "outputId": "02e2bd34-ad75-46c8-9694-6d629da940b1"
+        "outputId": "90c14e06-d136-4e95-cd1e-219eae517eb0"
       },
-      "execution_count": 169,
+      "execution_count": 192,
       "outputs": [
         {
           "output_type": "stream",
@@ -1586,9 +1598,9 @@
           "height": 72
         },
         "id": "1qicVidnU4cm",
-        "outputId": "d9d01c36-b44d-4e15-ef55-8ea7861a4789"
+        "outputId": "ce9aba29-9055-41fa-f1d9-088b8c30e512"
       },
-      "execution_count": 170,
+      "execution_count": 193,
       "outputs": [
         {
           "output_type": "stream",
@@ -1658,7 +1670,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_63ec2dea-fd63-4c4d-9dbf-2b80bc823f6e\", \"app.py\", 2154)"
+              "download(\"download_8d3feea1-a685-47d7-b267-717e7a55df99\", \"app.py\", 2154)"
             ]
           },
           "metadata": {}
@@ -1722,7 +1734,7 @@
               "<IPython.core.display.Javascript object>"
             ],
             "application/javascript": [
-              "download(\"download_b23d581d-3cc5-465d-9ec7-29601e4d8c18\", \"requirements.txt\", 64)"
+              "download(\"download_659447ef-baa2-4044-8d79-b9f6cc3b28ad\", \"requirements.txt\", 64)"
             ]
           },
           "metadata": {}
